# luigi-pipelines-template

./: .gitattributes  .gitignore  =2.6.0  COOKIECUTTER_IMPLEMENTATION.md  README.md  USAGE.md  cookiecutter.json  pyproject.toml  scrapy.cfg.example
.github/: copilot-instructions.md
docs/: COOKIECUTTER_GUIDE.md
hooks/: post_gen_project.py
logs/: .gitkeep
scripts/: start_luigi_services.ps1
scripts/cli/: generate.py
src/pipelines_planejamento/: pipelines.py
src/pipelines_planejamento/spiders/: propostas_spider.py
src/pipelines_planejamento/tasks/: __init__.py  example_task.py
src/pipelines_planejamento/tasks/core/: base_task.py  extract_base.py
src/pipelines_planejamento/utils/: __init__.py  utils.py
templates/luigi-task/: cookiecutter.json
templates/luigi-task/{{cookiecutter.task_name|lower|replace(' ', '_')}}/: {{cookiecutter.task_name|lower|replace(' ', '_')}}.py
templates/new-pipeline/: cookiecutter.json
templates/new-pipeline/{{cookiecutter.project_slug}}/: README.md
templates/scrapy-spider/: cookiecutter.json
templates/scrapy-spider/{{cookiecutter.spider_name}}/: {{cookiecutter.spider_name}}_spider.py
tests/: test_cookiecutter.py
{{cookiecutter.project_slug}}/: .env.example  README.md  luigi.cfg.example  print_tree.py  pyproject.toml
{{cookiecutter.project_slug}}/scripts/: start_luigi_services.ps1
{{cookiecutter.project_slug}}/scripts/cli/: generate.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: items.py  middlewares.py  pipelines.py  settings.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/api/: serve.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/model/: model_example.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/scheduler/: README.md  __main__.py  schedules.yaml
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/scrapers/: rodar_hora_a_hora.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/spiders/: __init__.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/tasks/: __init__.py  example_task.py  run_spiders.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/tasks/core/: extract_base.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/utils/: __init__.py
{{cookiecutter.project_slug}}/tests/: test_tasks.py
